// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiInput /> create compact multi-input 1`] = `
<div
  className="fd-multi-input"
>
  <div
    className="fd-multi-input-field"
  >
    <div
      className="fd-popover"
    >
      <div
        className="fd-popover__control"
      >
        <div
          aria-expanded={false}
          aria-haspopup="true"
          aria-label="Image label"
          className="fd-combobox-control"
        >
          <div
            className="fd-input-group fd-input-group--after fd-input-group--compact"
          >
            <input
              className="fd-input fd-input--compact"
              onClick={[Function]}
              placeholder="Select a Fruit"
              type="text"
            />
            <span
              className="fd-input-group__addon fd-input-group__addon--after fd-input-group__addon--button"
            >
              <button
                className="fd-button--light sap-icon--navigation-down-arrow"
                onClick={[Function]}
              />
            </span>
          </div>
        </div>
      </div>
      <div
        aria-hidden={true}
        className="fd-popover__body fd-popover__body--no-arrow"
      >
        <nav
          className="fd-menu"
        >
          <ul
            className="fd-menu__list"
          >
            <li>
              <label
                className="fd-menu__item"
                htmlFor="0_771464"
              >
                <input
                  checked={false}
                  className="fd-checkbox"
                  id="0_771464"
                  onChange={[Function]}
                  type="checkbox"
                  value="Apple"
                />
                Apple
              </label>
            </li>
            <li>
              <label
                className="fd-menu__item"
                htmlFor="1_771464"
              >
                <input
                  checked={false}
                  className="fd-checkbox"
                  id="1_771464"
                  onChange={[Function]}
                  type="checkbox"
                  value="Apricot"
                />
                Apricot
              </label>
            </li>
            <li>
              <label
                className="fd-menu__item"
                htmlFor="2_771464"
              >
                <input
                  checked={false}
                  className="fd-checkbox"
                  id="2_771464"
                  onChange={[Function]}
                  type="checkbox"
                  value="Acai"
                />
                Acai
              </label>
            </li>
            <li>
              <label
                className="fd-menu__item"
                htmlFor="3_771464"
              >
                <input
                  checked={false}
                  className="fd-checkbox"
                  id="3_771464"
                  onChange={[Function]}
                  type="checkbox"
                  value="African Moringa"
                />
                African Moringa
              </label>
            </li>
            <li>
              <label
                className="fd-menu__item"
                htmlFor="4_771464"
              >
                <input
                  checked={false}
                  className="fd-checkbox"
                  id="4_771464"
                  onChange={[Function]}
                  type="checkbox"
                  value="Bearberry"
                />
                Bearberry
              </label>
            </li>
            <li>
              <label
                className="fd-menu__item"
                htmlFor="5_771464"
              >
                <input
                  checked={false}
                  className="fd-checkbox"
                  id="5_771464"
                  onChange={[Function]}
                  type="checkbox"
                  value="Bilberry"
                />
                Bilberry
              </label>
            </li>
            <li>
              <label
                className="fd-menu__item"
                htmlFor="6_771464"
              >
                <input
                  checked={false}
                  className="fd-checkbox"
                  id="6_771464"
                  onChange={[Function]}
                  type="checkbox"
                  value="Blood orange"
                />
                Blood orange
              </label>
            </li>
            <li>
              <label
                className="fd-menu__item"
                htmlFor="7_771464"
              >
                <input
                  checked={false}
                  className="fd-checkbox"
                  id="7_771464"
                  onChange={[Function]}
                  type="checkbox"
                  value="Barbadine"
                />
                Barbadine
              </label>
            </li>
            <li>
              <label
                className="fd-menu__item"
                htmlFor="8_771464"
              >
                <input
                  checked={false}
                  className="fd-checkbox"
                  id="8_771464"
                  onChange={[Function]}
                  type="checkbox"
                  value="Barbados cherry"
                />
                Barbados cherry
              </label>
            </li>
            <li>
              <label
                className="fd-menu__item"
                htmlFor="9_771464"
              >
                <input
                  checked={false}
                  className="fd-checkbox"
                  id="9_771464"
                  onChange={[Function]}
                  type="checkbox"
                  value="Balsam Apple"
                />
                Balsam Apple
              </label>
            </li>
            <li>
              <label
                className="fd-menu__item"
                htmlFor="10_771464"
              >
                <input
                  checked={false}
                  className="fd-checkbox"
                  id="10_771464"
                  onChange={[Function]}
                  type="checkbox"
                  value="Chokeberry"
                />
                Chokeberry
              </label>
            </li>
            <li>
              <label
                className="fd-menu__item"
                htmlFor="11_771464"
              >
                <input
                  checked={false}
                  className="fd-checkbox"
                  id="11_771464"
                  onChange={[Function]}
                  type="checkbox"
                  value="Cranberry"
                />
                Cranberry
              </label>
            </li>
            <li>
              <label
                className="fd-menu__item"
                htmlFor="12_771464"
              >
                <input
                  checked={false}
                  className="fd-checkbox"
                  id="12_771464"
                  onChange={[Function]}
                  type="checkbox"
                  value="Cupuacu"
                />
                Cupuacu
              </label>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
  
</div>
`;

exports[`MultiInput /> create multi-input 1`] = `
<div
  className="fd-multi-input"
>
  <div
    className="fd-multi-input-field"
  >
    <div
      className="fd-popover"
    >
      <div
        className="fd-popover__control"
      >
        <div
          aria-expanded={false}
          aria-haspopup="true"
          aria-label="Image label"
          className="fd-combobox-control"
        >
          <div
            className="fd-input-group fd-input-group--after"
          >
            <input
              className="fd-input"
              onClick={[Function]}
              placeholder="Select a Fruit"
              type="text"
            />
            <span
              className="fd-input-group__addon fd-input-group__addon--after fd-input-group__addon--button"
            >
              <button
                className="fd-button--light sap-icon--navigation-down-arrow"
                onClick={[Function]}
              />
            </span>
          </div>
        </div>
      </div>
      <div
        aria-hidden={true}
        className="fd-popover__body fd-popover__body--no-arrow"
      >
        <nav
          className="fd-menu"
        >
          <ul
            className="fd-menu__list"
          >
            <li>
              <label
                className="fd-menu__item"
                htmlFor="0_657818"
              >
                <input
                  checked={false}
                  className="fd-checkbox"
                  id="0_657818"
                  onChange={[Function]}
                  type="checkbox"
                  value="Apple"
                />
                Apple
              </label>
            </li>
            <li>
              <label
                className="fd-menu__item"
                htmlFor="1_657818"
              >
                <input
                  checked={false}
                  className="fd-checkbox"
                  id="1_657818"
                  onChange={[Function]}
                  type="checkbox"
                  value="Apricot"
                />
                Apricot
              </label>
            </li>
            <li>
              <label
                className="fd-menu__item"
                htmlFor="2_657818"
              >
                <input
                  checked={false}
                  className="fd-checkbox"
                  id="2_657818"
                  onChange={[Function]}
                  type="checkbox"
                  value="Acai"
                />
                Acai
              </label>
            </li>
            <li>
              <label
                className="fd-menu__item"
                htmlFor="3_657818"
              >
                <input
                  checked={false}
                  className="fd-checkbox"
                  id="3_657818"
                  onChange={[Function]}
                  type="checkbox"
                  value="African Moringa"
                />
                African Moringa
              </label>
            </li>
            <li>
              <label
                className="fd-menu__item"
                htmlFor="4_657818"
              >
                <input
                  checked={false}
                  className="fd-checkbox"
                  id="4_657818"
                  onChange={[Function]}
                  type="checkbox"
                  value="Bearberry"
                />
                Bearberry
              </label>
            </li>
            <li>
              <label
                className="fd-menu__item"
                htmlFor="5_657818"
              >
                <input
                  checked={false}
                  className="fd-checkbox"
                  id="5_657818"
                  onChange={[Function]}
                  type="checkbox"
                  value="Bilberry"
                />
                Bilberry
              </label>
            </li>
            <li>
              <label
                className="fd-menu__item"
                htmlFor="6_657818"
              >
                <input
                  checked={false}
                  className="fd-checkbox"
                  id="6_657818"
                  onChange={[Function]}
                  type="checkbox"
                  value="Blood orange"
                />
                Blood orange
              </label>
            </li>
            <li>
              <label
                className="fd-menu__item"
                htmlFor="7_657818"
              >
                <input
                  checked={false}
                  className="fd-checkbox"
                  id="7_657818"
                  onChange={[Function]}
                  type="checkbox"
                  value="Barbadine"
                />
                Barbadine
              </label>
            </li>
            <li>
              <label
                className="fd-menu__item"
                htmlFor="8_657818"
              >
                <input
                  checked={false}
                  className="fd-checkbox"
                  id="8_657818"
                  onChange={[Function]}
                  type="checkbox"
                  value="Barbados cherry"
                />
                Barbados cherry
              </label>
            </li>
            <li>
              <label
                className="fd-menu__item"
                htmlFor="9_657818"
              >
                <input
                  checked={false}
                  className="fd-checkbox"
                  id="9_657818"
                  onChange={[Function]}
                  type="checkbox"
                  value="Balsam Apple"
                />
                Balsam Apple
              </label>
            </li>
            <li>
              <label
                className="fd-menu__item"
                htmlFor="10_657818"
              >
                <input
                  checked={false}
                  className="fd-checkbox"
                  id="10_657818"
                  onChange={[Function]}
                  type="checkbox"
                  value="Chokeberry"
                />
                Chokeberry
              </label>
            </li>
            <li>
              <label
                className="fd-menu__item"
                htmlFor="11_657818"
              >
                <input
                  checked={false}
                  className="fd-checkbox"
                  id="11_657818"
                  onChange={[Function]}
                  type="checkbox"
                  value="Cranberry"
                />
                Cranberry
              </label>
            </li>
            <li>
              <label
                className="fd-menu__item"
                htmlFor="12_657818"
              >
                <input
                  checked={false}
                  className="fd-checkbox"
                  id="12_657818"
                  onChange={[Function]}
                  type="checkbox"
                  value="Cupuacu"
                />
                Cupuacu
              </label>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
  
</div>
`;
